--- a/PermitSaveEditor/MainWindow.xaml
+++ b/PermitSaveEditor/MainWindow.xaml
@@ -48,6 +48,10 @@
                     <xctk:ColorPicker DisplayColorAndName="False" x:Name="CapeColour" Margin="96,163,32,20" Grid.Row="1" />
                     <TextBlock HorizontalAlignment="Left" Margin="484,69,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="96" Height="16"><Run Text="Badge Level"/><Run Language="en-gb" Text=":"/></TextBlock>
                     <TextBox x:Name="BadgeLevel" HorizontalAlignment="Left" Margin="585,68,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="41" Height="18"/>
+                    <TextBlock HorizontalAlignment="Left" Margin="251,73,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="78" Height="16"><Run Text="Fishing Level"/><Run Language="en-gb" Text=":"/></TextBlock>
+                    <TextBox x:Name="FishingLevel1" HorizontalAlignment="Left" Margin="329,73,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="27" Height="18"/>
+                    <TextBox x:Name="FishingLevel2" HorizontalAlignment="Left" Margin="373,73,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="28" Height="18"/>
+                    <TextBox x:Name="FishingLevel3" HorizontalAlignment="Left" Margin="421,73,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="28" Height="18"/>
                 </Grid>
             </TabItem>
             <TabItem x:Name="UnlockablesTab" Header="Unlockables" Margin="10,-2,-10,2">
