--- a/PermitSaveEditor/App.xaml
+++ b/PermitSaveEditor/App.xaml
@@ -1,9 +1,15 @@
 ﻿<Application x:Class="PermitSaveEditor.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:PermitSaveEditor"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Themes/MainButtonDarkTheme.xaml" />
+                <ResourceDictionary Source="Themes/TabItemDarkTheme.xaml" />
+                <ResourceDictionary Source="Themes/TextBoxDarkTheme.xaml" />
+                <ResourceDictionary Source="Themes/RadioButtonDarkTheme.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
