--- a/PermitSaveEditor/MainWindow.xaml
+++ b/PermitSaveEditor/MainWindow.xaml
@@ -112,7 +112,9 @@
                                          Name="Gold"
                                          Text="0"
                                          Grid.Column="1"
-                                         Style="{StaticResource MainTextBoxTheme}" />
+                                         Style="{StaticResource MainTextBoxTheme}"
+                                         PreviewTextInput="Gold_OnPreviewTextInput"/>
+                                
                             </Grid>
 
                             <Grid Grid.Column="2">
@@ -125,12 +127,13 @@
                                            HorizontalAlignment="Left"
                                            Margin="4,0,0,0"
                                            Grid.Column="0" />
-                                <TextBox Width="70" VerticalAlignment="Center"
+                                <TextBox Width="100" VerticalAlignment="Center"
                                          HorizontalAlignment="Left"
                                          Name="CarpenterLevel"
                                          Text="0"
                                          Grid.Column="1"
-                                         Style="{StaticResource MainTextBoxTheme}" />
+                                         Style="{StaticResource MainTextBoxTheme}"
+                                         PreviewTextInput="CarpenterLevel_OnPreviewTextInput"/>
                             </Grid>
                         </Grid>
 
@@ -173,7 +176,8 @@
                                          Name="Wood"
                                          Text="0"
                                          Grid.Column="1"
-                                         Style="{StaticResource MainTextBoxTheme}" />
+                                         Style="{StaticResource MainTextBoxTheme}" 
+                                         PreviewTextInput="Wood_OnPreviewTextInput"/>
                             </Grid>
 
                             <Grid Grid.Column="2">
@@ -186,12 +190,13 @@
                                            HorizontalAlignment="Left"
                                            Margin="4,0,0,0"
                                            Grid.Column="0" />
-                                <TextBox Width="70" VerticalAlignment="Center"
+                                <TextBox Width="100" VerticalAlignment="Center"
                                          HorizontalAlignment="Left"
                                          Name="BlacksmithLevel"
                                          Text="0"
                                          Grid.Column="1"
-                                         Style="{StaticResource MainTextBoxTheme}" />
+                                         Style="{StaticResource MainTextBoxTheme}"
+                                         PreviewTextInput="BlacksmithLevel_OnPreviewTextInput"/>
                             </Grid>
                         </Grid>
 
@@ -238,7 +243,8 @@
                                          Name="Stone"
                                          Text="0"
                                          Grid.Column="1"
-                                         Style="{StaticResource MainTextBoxTheme}" />
+                                         Style="{StaticResource MainTextBoxTheme}" 
+                                         PreviewTextInput="Stone_OnPreviewTextInput"/>
                             </Grid>
 
                             <Grid Grid.Column="2">
@@ -251,12 +257,13 @@
                                            HorizontalAlignment="Left"
                                            Margin="4,0,0,0"
                                            Grid.Column="0" />
-                                <TextBox Width="70" VerticalAlignment="Center"
+                                <TextBox Width="100" VerticalAlignment="Center"
                                          HorizontalAlignment="Left"
                                          Name="BadgeLevel"
                                          Text="0"
                                          Grid.Column="1"
-                                         Style="{StaticResource MainTextBoxTheme}" />
+                                         Style="{StaticResource MainTextBoxTheme}" 
+                                         PreviewTextInput="BadgeLevel_OnPreviewTextInput"/>
                             </Grid>
                         </Grid>
 
@@ -272,38 +279,41 @@
                             <Grid Grid.Column="2">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="95" />
-                                    <ColumnDefinition Width="25" />
-                                    <ColumnDefinition Width="25" />
-                                    <ColumnDefinition Width="25" />
+                                    <ColumnDefinition Width="35" />
+                                    <ColumnDefinition Width="35" />
+                                    <ColumnDefinition Width="35" />
                                 </Grid.ColumnDefinitions>
                                 <TextBlock Text="Fishing Level"
                                            VerticalAlignment="Center"
                                            HorizontalAlignment="Left"
                                            Margin="4,0,0,0"
                                            Grid.Column="0" />
-                                <TextBox Width="20"
+                                <TextBox Width="30"
                                          VerticalAlignment="Center"
                                          Name="FishingLevel1"
                                          HorizontalAlignment="Left"
                                          Grid.Column="1"
                                          Text="0"
-                                         Style="{StaticResource MainTextBoxTheme}" />
+                                         Style="{StaticResource MainTextBoxTheme}"
+                                         PreviewTextInput="FishingLevel1_OnPreviewTextInput"/>
 
-                                <TextBox Width="20"
+                                <TextBox Width="30"
                                          VerticalAlignment="Center"
                                          HorizontalAlignment="Left"
                                          Name="FishingLevel2"
                                          Grid.Column="2"
                                          Text="0"
-                                         Style="{StaticResource MainTextBoxTheme}" />
+                                         Style="{StaticResource MainTextBoxTheme}"
+                                         PreviewTextInput="FishingLevel2_OnPreviewTextInput"/>
 
-                                <TextBox Width="20"
+                                <TextBox Width="30"
                                          VerticalAlignment="Center"
                                          HorizontalAlignment="Left"
                                          Name="FishingLevel3"
                                          Grid.Column="3"
                                          Text="0"
-                                         Style="{StaticResource MainTextBoxTheme}" />
+                                         Style="{StaticResource MainTextBoxTheme}" 
+                                         PreviewTextInput="FishingLevel3_OnPreviewTextInput"/>
                             </Grid>
                         </Grid>
 
