--- a/PermitSaveEditor/MainWindow.xaml
+++ b/PermitSaveEditor/MainWindow.xaml
@@ -113,8 +113,8 @@
                                          Text="0"
                                          Grid.Column="1"
                                          Style="{StaticResource MainTextBoxTheme}"
-                                         PreviewTextInput="Gold_OnPreviewTextInput"/>
-                                
+                                         PreviewTextInput="Resource_OnPreviewTextInput"/>
+
                             </Grid>
 
                             <Grid Grid.Column="2">
@@ -133,7 +133,7 @@
                                          Text="0"
                                          Grid.Column="1"
                                          Style="{StaticResource MainTextBoxTheme}"
-                                         PreviewTextInput="CarpenterLevel_OnPreviewTextInput"/>
+                                         PreviewTextInput="Level_OnPreviewTextInput"/>
                             </Grid>
                         </Grid>
 
@@ -177,7 +177,7 @@
                                          Text="0"
                                          Grid.Column="1"
                                          Style="{StaticResource MainTextBoxTheme}" 
-                                         PreviewTextInput="Wood_OnPreviewTextInput"/>
+                                         PreviewTextInput="Resource_OnPreviewTextInput"/>
                             </Grid>
 
                             <Grid Grid.Column="2">
@@ -196,7 +196,7 @@
                                          Text="0"
                                          Grid.Column="1"
                                          Style="{StaticResource MainTextBoxTheme}"
-                                         PreviewTextInput="BlacksmithLevel_OnPreviewTextInput"/>
+                                         PreviewTextInput="Level_OnPreviewTextInput"/>
                             </Grid>
                         </Grid>
 
@@ -244,7 +244,7 @@
                                          Text="0"
                                          Grid.Column="1"
                                          Style="{StaticResource MainTextBoxTheme}" 
-                                         PreviewTextInput="Stone_OnPreviewTextInput"/>
+                                         PreviewTextInput="Resource_OnPreviewTextInput"/>
                             </Grid>
 
                             <Grid Grid.Column="2">
@@ -257,13 +257,13 @@
                                            HorizontalAlignment="Left"
                                            Margin="4,0,0,0"
                                            Grid.Column="0" />
-                                <TextBox Width="100" VerticalAlignment="Center"
+                                <TextBox Width="100" VerticalAlignment="Bottom"
                                          HorizontalAlignment="Left"
                                          Name="BadgeLevel"
                                          Text="0"
                                          Grid.Column="1"
                                          Style="{StaticResource MainTextBoxTheme}" 
-                                         PreviewTextInput="BadgeLevel_OnPreviewTextInput"/>
+                                         PreviewTextInput="Level_OnPreviewTextInput" Margin="0,0,0,2"/>
                             </Grid>
                         </Grid>
 
